--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 --------------------------------------------------------------*/
 
 :root {
-    --colorGreen: red;
+    --colorGreen: #e30713;
     --colorGray: #666666;
 }
 
@@ -171,7 +171,7 @@ h6 {
 #header #logo h1 a:hover {
     color: #fff;
     padding-left: 10px;
-    border-left: 4px solid var(--colorGreen);
+    /* border-left: 4px solid var(--colorGreen); */
     /* margin-right: -10px; */
 }
 
@@ -180,7 +180,8 @@ h6 {
     margin: 0;
     padding: 0;
     margin: 0;
-    margin-top: -16px;
+    margin-top: -12px;
+    padding: 4px;
 }
 
 
@@ -700,6 +701,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     border-radius: 0 0 4px 4px;
     box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
     margin-bottom: 20px;
+    height: 100%;
 }
 
 #about .about-col .img {
