--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,18 @@ h6 {
     padding: 4px;
 }
 
+#header h1 {
+    width: 300px;
+    transition: all 300ms;
+    overflow: hidden;
+}
+
+#header.header-scrolled h1 {
+    width: 0px;
+    transition: all 300ms;
+    overflow: hidden;
+}
+
 
 /*--------------------------------------------------------------
 # Intro Section
@@ -752,11 +764,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col h2 a {
-    color: #2a3338;
+    color: var(--colorGreen);
 }
 
 #about .about-col h2 a:hover {
-    color: var(--colorGreen);
+    color: #2a3338;
 }
 
 #about .about-col p {
@@ -854,9 +866,63 @@ body.mobile-nav-active #mobile-nav-toggle {
     border: 2px solid var(--colorGreen);
 }
 
+.whatsapp {
+    width: 48px;
+    margin-bottom: 24px;
+    margin-top: 10px;
+}
+
 
 /* Call To Action Section
 --------------------------------*/
+
+.masServicios {
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.servicioChico {
+    padding: 10px;
+    background: white;
+    border-radius: 0 5px 5px 0;
+    margin: 5px;
+    border-left: solid red;
+    box-shadow: 0px 2px 12px rgb(0 0 0 / 8%);
+    z-index: 2;
+    position: relative;
+    cursor: pointer;
+}
+
+.otrosServicios {
+    color: #2a3338;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 15px;
+}
+
+.servicioChico:hover {
+    color: var(--colorGreen);
+}
+
+.img1 {
+    position: absolute;
+    top: -60px;
+    position: absolute;
+    left: 10%;
+    opacity: 50%;
+    z-index: 0;
+}
+
+.img2 {
+    top: 11%;
+    position: absolute;
+    right: 10%;
+    z-index: 0;
+    opacity: 40%;
+}
 
 #skills {
     padding: 60px 0;
@@ -1564,9 +1630,9 @@ body {
 
 .big-slider {
     color: white;
-    font-size: 66pt;
+    font-size: 54pt;
     text-align: left;
-    width: 70%;
+    width: 79%;
     padding-right: 30%;
     margin: auto;
     font-weight: bolder;
@@ -1575,7 +1641,7 @@ body {
 
 .big-slider-2 {
     color: white;
-    font-size: 66pt;
+    font-size: 54pt;
     text-align: left;
     width: 80%;
     padding-right: 30%;
@@ -1586,10 +1652,10 @@ body {
 
 .big-slider-3 {
     color: white;
-    font-size: 66pt;
+    font-size: 54pt;
     text-align: right;
     width: 80%;
-    padding-left: 30%;
+    padding-left: 20%;
     margin: auto;
     font-weight: bolder;
     font-family: "Roboto", sans-serif;
@@ -1597,10 +1663,10 @@ body {
 
 #intro p.subtitle-programming-languajes {
     color: white;
-    font-size: 26pt;
+    font-size: 20pt;
     text-align: left;
     width: 80%;
-    padding-right: 30%;
+    padding-right: 21%;
     margin: auto;
     font-weight: lighter;
     font-family: "Roboto", sans-serif;
@@ -1628,7 +1694,8 @@ body {
     position: relative;
 }
 
-#call-to-action::before {
+
+/* #call-to-action::before {
     content: " ";
     background: rgb(42 51 56 / 10%);
     position: absolute;
@@ -1636,7 +1703,7 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
-}
+} */
 
 .owl-item {
     text-align: center;
@@ -1687,6 +1754,14 @@ body {
     }
 }
 
+@media (max-width: 1224px) {
+    .big-slider-3,
+    .big-slider-2,
+    .big-slider {
+        font-size: 35pt;
+    }
+}
+
 @media (max-width: 768px) {
     .back-to-top {
         bottom: 15px;
@@ -1705,5 +1780,29 @@ body {
     }
     #mobile-nav-toggle {
         display: inline;
+    }
+    .big-slider-3,
+    .big-slider-2,
+    .big-slider {
+        font-size: 25pt;
+    }
+    .masServicios {
+        grid-template-columns: 1fr;
+    }
+    body {
+        padding-bottom: 80px;
+    }
+    .subtitle-programming-languajes {
+        display: none;
+    }
+    .img1,
+    .img2 {
+        display: none;
+    }
+    .vacantes {
+        max-width: 100% !important;
+    }
+    .microsite_vacancy {
+        margin: 0 !important;
     }
 }
